[tool.poetry]
name = "loonie"
version = "0.1.0"
description = ""
authors = ["Youssef Ismail <yismail@ualberta.ca>"]
readme = "README.md"
packages = [
    { include = "api"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

